bruinmatch-frontend/src/Rec.css
.card-container {
  width: 700px;
  height: 400px;
  border: 3px solid #2774ae;
  margin: 0 auto;
  border-radius: 50px;
  overflow: hidden;
  padding-left: 40px;
  padding-top: 33px;
}

.TopBanner {
  position: absolute;
  width: 1920px;
  height: 94px;
  left: 0px;
  top: 0px;
  background: #2774ae;
}

.topBannerText {
  position: absolute;
  width: 295px;
  height: 56px;
  left: 24px;
  top: 19px;

  font-family: "Ubuntu";
  font-style: normal;
  font-weight: 700;
  font-size: 48px;
  line-height: 55px;
  /* identical to box height */
  text-align: center;
  letter-spacing: 0.05em;

  color: #ffffff;
}
.list {
  display: grid;
  margin: 10px 0 50px 0;
  grid-template-columns: repeat(2, 1fr);
  grid-auto-rows: 3fr;
  padding-left: 100px;
  padding-top: 100px;
  align-items: space-evenly;

  font-size: 18px;
  font-weight: 500;
  font-family: "Prompt";
  color: #525252;
}

.name1 {
  font-size: 28px;
  padding-left: 350px;
}

.gender1 {
  padding-top: 5px;
  padding-left: 300px;
}

.major1 {
  padding-left: 300px;
}

.year1 {
  padding-left: 300px;
}

.phone1 {
  padding-left: 300px;
}

.email1 {
  padding-left: 300px;
}

.bio1 {
  padding-top: 10px;
  padding-left: 290px;
}

.save1 {
  margin-left: 130px;
  margin-top: 75px;
  border: 3px solid #2774ae;
  border-radius: 40px;
  background-color: #c1e4ff;
  padding: 5px 20px;
  font-size: 20px;
}

.save1:hover {
  background: #659eca;
}

.save1:active {
  background: #c1e4ff;
}

.view1 {
  margin-left: 200px;
  margin-top: 75px;
  border: 3px solid #2774ae;
  border-radius: 40px;
  background-color: #c1e4ff;
  padding: 5px 20px;
  font-size: 20px;
}

.view1:hover {
  background: #659eca;
}

.view1:active {
  background: #c1e4ff;
}

.ProfilePhoto1{
  border-radius: 50%;
  display: inline-block; 
  margin-bottom: -200;
  position: relative; 
  width: 200px; 
  height: 200px;
  overflow: hidden; 
}

.desc {
  height: 130px;
  padding: 10px;
}

.desc h2 {
  font-size: 1em;
  font-weight: 400;
}

.desc h3,
p {
  font-weight: 300;
}

.desc h3 {
  color: #6c757d;
  font-size: 1em;
  padding: 10px 0 10px 0;
}

